chore(wanwu): update .env.bak & manual

--- a/configs/microservice/bff-service/static/manual/3.资源库.md
+++ b/configs/microservice/bff-service/static/manual/3.资源库.md
@@ -6,7 +6,7 @@
 
 ### MCP服务
 
-#### **【导入MCP】**
+#### 【导入MCP】
 
 ![image-20251030101444123](assets/image-20251030101444123.png)
 
@@ -18,7 +18,7 @@
 
 
 
-#### **【创建MCP】**
+#### 【创建MCP】
 
 平台支持用户绑定工具，创建自己的MCP Server，并对外提供服务。这里可以看到你创建的所有 MCP server，以及他们管理的工具数量。
 
@@ -89,3 +89,19 @@
 ![image-20250926133827991](assets/image-20250926133827991.png)
 
 ![image-20250822101724565](assets/image-20250822101724565.png)
+
+**【API身份认证鉴权】**
+
+支持3种鉴权方式：无需鉴权、请求头、查询参数。
+
+![image-20251107110929180](assets/image-20251107110929180.png)
+
+
+
+### 提示词
+
+提供提示词模板配置界面，用户可新增提示词模板。或点击查看现有的提示词模板。平台在“模板广场”提供了丰富的提示词模板库，用户可进行复制使用。
+
+![image-20251107111020792](assets/image-20251107111020792.png)
+
+![image-20251107111123907](assets/image-20251107111123907.png)
