--- a/configs/microservice/bff-service/static/manual/7.智能体.md
+++ b/configs/microservice/bff-service/static/manual/7.智能体.md
@@ -14,9 +14,20 @@
 
 **开场白：**用于编辑开场问候语
 
+**推荐问题：**可设置引导问题
+
 **系统提示词：**填写应用功能描述、应用处理流程描述、以及对生成结果的要求。
 
-**推荐问题：**可设置引导问题
+- **插入提示词：**用户可选择推荐的内置或自定义提示词，方便快捷插入现有智能体。也可点击“全部”，查看提示词模板库，插入提示词。	
+- **提交至提示词模板库：**用户可将智能体中调试好的提示词，添加至资源库-提示词模板库，设置提示词的图标、名称、描述、内容。
+
+![image-20251107100400706](assets/image-20251107100400706.png)
+
+![image-20251107101552824](assets/image-20251107101552824.png)
+
+![image-20251107110512613](assets/image-20251107110512613.png)
+
+![image-20251107110531664](assets/image-20251107110531664.png)
 
 **联网检索：**通过配置联网检索的url和key，可启用“博查”网络搜索辅助问答。
 
