--- a/configs/microservice/bff-service/static/manual/10.模板广场.md
+++ b/configs/microservice/bff-service/static/manual/10.模板广场.md
@@ -1,5 +1,7 @@
 # 模板广场
 
+### 工作流模板
+
 平台提供优选内置行业工作流模板。用户可复制或下载工作流模板进行使用。
 
 ![image-20251030092141634](assets/image-20251030092141634.png)
@@ -25,3 +27,23 @@
 点击“下载”按钮，可直接导出工作流模板json文件。
 
 ![image-20251030092744723](assets/image-20251030092744723.png)
+
+
+
+### 提示词模板
+
+![image-20251107111925173](assets/image-20251107111925173.png)
+
+**【查看详情】**
+
+点击提示词模板，可查看提示词内容
+
+![image-20251107112016244](assets/image-20251107112016244.png)
+
+**【复制】**
+
+点击“复制”按钮，可编辑提示词图标、名称、描述。确定后，可直接复制至用户资源库-提示词模块进行使用。
+
+![image-20251107112105088](assets/image-20251107112105088.png)
+
+![image-20251107112123040](assets/image-20251107112123040.png)
