fix(wanwu): openapi doc

--- a/configs/microservice/bff-service/static/manual/wanwu-openapi/4.对话流API.md
+++ b/configs/microservice/bff-service/static/manual/wanwu-openapi/4.对话流API.md
@@ -23,6 +23,7 @@
 
 | Parameter         | Required | Type   | Instructions |
 | ----------------- | -------- | ------ | ------------ |
+| uuid              | 是       | string | 对话流唯一ID  |
 | conversation_name | 是       | string | 对话标题     |
 
 ### 响应参数
@@ -37,7 +38,6 @@
 
 | Parameter       | Type   | Instructions                           |
 | --------------- | ------ | -------------------------------------- |
-| uuid            | string | 系统为每个页面请求自动生成的唯一追踪ID |
 | conversation_id | string | 当前响应文本片段ID                     |
 
 ### 调用示例
@@ -48,8 +48,8 @@ curl -X POST -k 'http://localhost:8081/service/api/openapi/v1/chatflow/conversat
 --header 'Accept: application/json' \
 --header 'Authorization: Bearer <API Key>' \
 --data '{
-	"uuid":"7582904596348010496",
-	"conversation_name":"对话123"
+    "uuid":"7582904596348010496",
+    "conversation_name":"对话123"
 }'
 
 ```
@@ -61,7 +61,7 @@ curl -X POST -k 'http://localhost:8081/service/api/openapi/v1/chatflow/conversat
 	"code":0,
 	"data":{
 		"conversation_id":"1234567890"
-		},
+	},
 	"msg":""
 }
 ```
@@ -88,8 +88,8 @@ curl -X POST -k 'http://localhost:8081/service/api/openapi/v1/chatflow/conversat
 
 | Parameter       | Required | Type   | Instructions           |
 | --------------- | -------- | ------ | ---------------------- |
+| uuid            | 是       | string | 对话流唯一ID  |
 | conversation_id | 是       | string | 历史响应文本片段ID     |
-| uuid | 是       | string         | 系统为每个页面请求自动生成的唯一追踪ID |
 | query           | 是       | string | 用户提出的问题或提示语 |
 | parameters      | 否       | map[string]any | 试运行参数 |
 
@@ -134,16 +134,16 @@ curl -X POST -k 'http://localhost:8081/service/api/openapi/v1/chatflow/conversat
 
 #### 通过对话流id进行对话
 
-```json
+```shell
 curl -k --location --request POST 'http://localhost:8081/service/api/openapi/v1/chatflow/chat' \
 --header 'Content-Type: application/json' \
 --header 'Accept: application/json' \
 --header 'Authorization: Bearer <API Key>' \
 --data '{
-        "conversation_id":"1234567890",
-		"uuid": "7552817719230332928",
-        "query":"你好!",
-        "parameters":{"test":"test"}
+    "uuid": "7552817719230332928",
+    "conversation_id":"1234567890",
+    "query":"你好!",
+    "parameters":{"test":"test"}
 }'
 ```
 
@@ -243,8 +243,8 @@ data: {
 
 | Parameter       | Required | Type   | Instructions                           |
 | --------------- | -------- | ------ | -------------------------------------- |
+| uuid            | 是       | string | 对话流唯一ID  |
 | conversation_id | 是       | string | 历史响应文本片段ID                     |
-| uuid            | 是       | string | 系统为每个页面请求自动生成的唯一追踪ID |
 | limit           | 否       | string | 历史对话展示数量                       |
 
 ### 响应参数W
@@ -294,15 +294,15 @@ data: {
 
 #### 通过对话流id进行对话
 
-```json
+```shell
 curl -k --location --request POST 'http://localhost:8081/service/api/openapi/v1/chatflow/conversation/message/list' \
 --header 'Content-Type: application/json' \
 --header 'Accept: application/json' \
 --header 'Authorization: Bearer <API Key>' \
 --data '{
-        "conversation_id":"1234567890",
-		"uuid": "7552817719230332928",
-        "limit":"1"
+    "uuid": "7552817719230332928",
+    "conversation_id":"1234567890",
+    "limit":"1"
 }'
 ```
 
