--- a/configs/microservice/bff-service/static/manual/wanwu-openapi/1.文本问答API.md
+++ b/configs/microservice/bff-service/static/manual/wanwu-openapi/1.文本问答API.md
@@ -19,9 +19,9 @@
 
 | Parameter | Required | Type   | Instructions                                                 |
 | --------- | -------- | ------ | ------------------------------------------------------------ |
-| stream    | 否       | bool   | 是否以流式接口的形式返回数据，默认为非流式。 true为流式，false为非流式。 |
+| uuid      | 是       | string | 文本问答唯一ID                                                |
 | query     | 是       | string | 用户提出的问题或提示语                                       |
-| uuid      | 是       | string | 系统为每个页面请求自动生成的唯一追踪ID，用于全链路日志追踪和问题定位。 |
+| stream    | 否       | bool   | 是否以流式接口的形式返回数据，默认为非流式。 true为流式，false为非流式。 |
 
 ### 响应参数
 
@@ -66,9 +66,9 @@ curl -k --location 'http://localhost:8081/service/api/openapi/v1/rag/chat' \
 --header 'Accept: application/json' \
 --header 'Authorization: Bearer <API Key>' \
 --data '{
-    "stream": true,
+    "uuid": "2001641058764591104",
     "query": "请一句话介绍DeepSeek",
-    "uuid": "2001641058764591104"
+    "stream": true
 }'
 ```
 
@@ -80,9 +80,9 @@ curl -k --location 'http://localhost:8081/service/api/openapi/v1/rag/chat' \
 --header 'Accept: application/json' \
 --header 'Authorization: Bearer <API Key>' \
 --data '{
-    "stream": false,
+    "uuid": "2001641058764591104",
     "query": "请一句话介绍DeepSeek",
-    "uuid": "2001641058764591104"
+    "stream": false
 }'
 ```
 
