--- a/configs/microservice/bff-service/static/manual/wanwu-openapi/2.智能体API.md
+++ b/configs/microservice/bff-service/static/manual/wanwu-openapi/2.智能体API.md
@@ -23,8 +23,8 @@
 
 | Parameter | Required | Type   | Instructions                                                 |
 | --------- | -------- | ------ | ------------------------------------------------------------ |
+| uuid      | 是       | string | 智能体唯一ID                                                  |
 | title     | 是       | string | 对话标题                                                     |
-| uuid      | 是       | string | 系统为每个页面请求自动生成的唯一追踪ID，用于全链路日志追踪和问题定位。 |
 
 ### 响应参数
 
@@ -85,10 +85,10 @@ curl -k --location 'http://localhost:8081/service/api/openapi/v1/agent/conversat
 
 | Parameter       | Required | Type   | Instructions                                                 |
 | --------------- | -------- | ------ | ------------------------------------------------------------ |
+| uuid            | 是       | string | 智能体唯一ID                                                  |
 | conversation_id | 是       | string | 历史响应文本片段ID                                           |
-| stream          | 否       | bool   | 是否以流式接口的形式返回数据，默认为非流式。 true为流式，false为非流式 |
-| uuid            | 是       | string | 系统为每个页面请求自动生成的唯一追踪ID，用于全链路日志追踪和问题定位。 |
 | query           | 是       | string | 用户提出的问题或提示语                                       |
+| stream          | 否       | bool   | 是否以流式接口的形式返回数据，默认为非流式。 true为流式，false为非流式 |
 
 ### 响应参数
 
@@ -142,10 +142,10 @@ curl -k --location 'http://localhost:8081/service/api/openapi/v1/agent/chat' \
 --header 'Accept: application/json' \
 --header 'Authorization: Bearer <API Key>' \
 --data '{
-    "stream": true,
-    "conversation_id": "56",
     "uuid": "2004010127610351679",
-    "query": "请一句话介绍DeepSeek"
+    "conversation_id": "56",
+    "query": "请一句话介绍DeepSeek",
+    "stream": true
 }'
 ```
 
@@ -157,10 +157,10 @@ curl -k --location 'http://localhost:8081/service/api/openapi/v1/agent/chat' \
 --header 'Accept: application/json' \
 --header 'Authorization: Bearer <API Key>' \
 --data '{
-    "stream": false,
+    "uuid": "2004010127610351679",
     "conversation_id": "56",
-	"uuid": "2004010127610351679",
-    "query": "请一句话介绍DeepSeek"
+    "query": "请一句话介绍DeepSeek",
+    "stream": false
 }'
 ```
 
